Fix nav options z-index bug

--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -4,7 +4,6 @@ header {
     padding: .5rem 1rem;
     font-size: 0;
     position: relative;
-    z-index: $layer-header;
     display: flex;
     align-items: center;
     margin-bottom: $spacing-large;
